@@ -1,36 +1,28 @@
 plugins {
-    id "net.saliman.cobertura" version "2.5.4"
-    id "com.github.johnrengelman.shadow" version "5.1.0"
+    id 'java-library'
+    id 'com.github.johnrengelman.shadow' version "5.2.0"
 }
 
-apply plugin: "net.saliman.cobertura"
+apply plugin: 'java-library'
 apply plugin: "com.github.johnrengelman.shadow"
 
 group 'com.hiddenswitch'
-version '0.8.0'
 
-ext.vendor = "Parallel Universe Software Co."
-ext.quasarJar = "${rootProject.projectDir}/quasar-core/build/libs/quasar-core-${version}.jar"
-ext.java8 = JavaVersion.current() == JavaVersion.VERSION_1_8
-ext.guavaVer = '26.0-jre'
-ext.asmVer = project.ext.java8 ? '5.2' : '7.0'
-ext.kotlinVer = '1.3.0'
-
-java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.current()
-    if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
-        disableAutoTargetJvm()
-    }
-}
+def vendor = "Parallel Universe Software Co."
+def quasarJar = "${rootProject.projectDir}/quasar-core/build/libs/quasar-core-${version}.jar"
+def guavaVer = '26.0-jre'
+def asmVer = '7.2'
+def moduleName = 'co.paralleluniverse.quasar.core'
 
 repositories {
     mavenLocal()
-    mavenCentral()
+    jcenter()
     maven { url "https://oss.sonatype.org/content/repositories/releases" }
     maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
-    jcenter()
 }
+
+sourceCompatibility = '11'
+targetCompatibility = '11'
 
 configurations.all {
     resolutionStrategy {
@@ -42,14 +34,23 @@ configurations {
     compileOnly
     provided
     timewarp
-    // markdownDoclet
-    shadowedJar.extendsFrom(runtime)
+    shadowedJar.extendsFrom runtime
+    archives.extendsFrom runtime
+    uninstrumentedClasspath {
+        canBeConsumed = false
+        canBeResolved = true
+        extendsFrom runtime
+    }
+    uninstrumentedJars {
+        canBeConsumed = true
+        canBeResolved = false
+    }
 }
 
 sourceSets {
     main {
         java {
-            srcDir project.ext.java8 ? 'src/jdk8/java' : 'src/jdk11/java'
+            srcDir 'src/main/java'
         }
 
         compileClasspath += configurations.compileOnly + configurations.provided
@@ -85,57 +86,49 @@ sourceSets {
     }
 }
 
-compileJava {
-    options.warnings = false;
-}
-
 dependencies {
-    if (project.ext.java8) {
-        compile files(fileTree(dir: 'baselib', includes: ['*.jar']))
-        compile("io.dropwizard.metrics:metrics-core:3.2.3") {
-            exclude group: 'org.slf4j', module: '*'
-        }
-    } else {
-        compile("io.dropwizard.metrics:metrics-core:4.1.0-rc2") {
-            exclude group: 'org.slf4j', module: '*'
-        }
-        compile "io.dropwizard.metrics:metrics-jmx:4.1.0-rc2"
+    implementation("io.dropwizard.metrics:metrics-core:4.1.2") {
+        exclude group: 'org.slf4j', module: '*'
     }
 
+    implementation "io.dropwizard.metrics:metrics-jmx:4.1.2"
+
     provided "org.apache.ant:ant:1.10.5"
-    compile 'com.google.errorprone:error_prone_annotations:2.3.2'
-    compile("com.google.guava:guava:$guavaVer") {
+    implementation 'com.google.errorprone:error_prone_annotations:2.1.3'
+    implementation("com.google.guava:guava:${guavaVer}") {
         exclude group: 'com.google.errorprone', module: '*'
         exclude group: 'org.checkerframework', module: 'checker-qual'
     }
     timewarp 'co.paralleluniverse:timewarp:0.2.0-SNAPSHOT'
-    testCompile 'co.paralleluniverse:timewarp:0.2.0-SNAPSHOT'
-    testCompile 'org.hamcrest:hamcrest-all:1.3'
-    testCompile('junit:junit:4.12') {
+    testImplementation 'co.paralleluniverse:timewarp:0.2.0-SNAPSHOT'
+    testImplementation 'org.hamcrest:hamcrest-all:1.3'
+    testImplementation('junit:junit:4.12') {
         exclude group: 'org.hamcrest', module: '*'
     }
-    testCompile('com.google.truth:truth:0.42') {
+    testImplementation('com.google.truth:truth:0.42') {
         exclude group: 'com.google.guava', module: 'guava'
         exclude group: 'com.google.errorprone', module: '*'
         exclude group: 'junit', module: 'junit'
     }
 
-    testCompile('org.mockito:mockito-core:2.24.5') {
+    testImplementation('org.mockito:mockito-core:2.24.5') {
         exclude group: "org.ow2.asm", module: '*'
         exclude group: "net.bytebuddy", module: '*'
     }
     testRuntime "net.bytebuddy:byte-buddy:1.9.2" // for Mockito
-    testCompile "org.ow2.asm:asm:$asmVer"
+    testImplementation "org.ow2.asm:asm:$asmVer"
 
     jmhCompile 'org.openjdk.jmh:jmh-core:1.21'
     jmhCompile 'org.openjdk.jmh:jmh-generator-annprocess:1.21'
 
     annotationProcessor 'org.kohsuke.metainf-services:metainf-services:1.8'
 
-    compile "org.hdrhistogram:HdrHistogram:2.1.10"
-    compile("org.latencyutils:LatencyUtils:2.0.3") {
+    implementation "org.hdrhistogram:HdrHistogram:2.1.10"
+    implementation("org.latencyutils:LatencyUtils:2.0.3") {
         exclude group: "org.hdrhistogram", module: '*'
     }
+
+    // Will be shadowed
     compile "org.ow2.asm:asm:$asmVer"
     compile "org.ow2.asm:asm-analysis:$asmVer"
     compile "org.ow2.asm:asm-commons:$asmVer"
@@ -143,42 +136,61 @@ dependencies {
 
     // The exclusions are needed to get asm 5.0.4 whilst Kryo still depends on 5.0.3
     compile "org.objenesis:objenesis:2.6"
-    compile("com.esotericsoftware:kryo:4.0.2") {
-        exclude group: "org.ow2.asm", module: '*'
-        exclude group: "org.objenesis", module: '*'
-    }
-    compile("de.javakaffee:kryo-serializers:0.42") {
-        exclude group: "com.esotericsoftware", module: '*'
-        exclude group: "com.esotericsoftware.kryo", module: '*'
-    }
-
-    // this happens after we've filtered the dependency on ASM from core's module-info
-    compileTestJava {
-        if (!project.ext.java8) {
-            options.compilerArgs += ["--add-modules", "org.objectweb.asm", "--add-reads", "co.paralleluniverse.quasar.core=org.objectweb.asm"]
-        }
-    }
 
     provided('junit:junit:4.12') {
         exclude group: 'org.hamcrest', module: '*'
     }
-    // annotationProcessor 'com.google.auto.service:auto-service:1.0-rc1' // same as metainf-services
-    // markdownDoclet "ch.raffael.pegdown-doclet:pegdown-doclet:1.1.1"
 }
 
 compileJava.dependsOn processResources
 compileJava {
+    options.warnings = false;
+
+    options.compilerArgs << '-Xlint:none'
+    options.compilerArgs << '-nowarn' // same as '-Xlint:none'
+
+    // Turn them off manually
+    options.compilerArgs << '-Xlint:-auxiliaryclass'
+    options.compilerArgs << '-Xlint:-cast'
+    options.compilerArgs << '-Xlint:-classfile'
+    options.compilerArgs << '-Xlint:-deprecation'
+    options.compilerArgs << '-Xlint:-dep-ann'
+    options.compilerArgs << '-Xlint:-divzero'
+    options.compilerArgs << '-Xlint:-empty'
+    options.compilerArgs << '-Xlint:-fallthrough'
+    options.compilerArgs << '-Xlint:-finally'
+    options.compilerArgs << '-Xlint:-options'
+    options.compilerArgs << '-Xlint:-overloads'
+    options.compilerArgs << '-Xlint:-overrides'
+    options.compilerArgs << '-Xlint:-path'
+    options.compilerArgs << '-Xlint:-processing'
+    options.compilerArgs << '-Xlint:-rawtypes'
+    options.compilerArgs << '-Xlint:-serial'
+    options.compilerArgs << '-Xlint:-static'
+    options.compilerArgs << '-Xlint:-try'
+    options.compilerArgs << '-Xlint:-unchecked'
+    options.compilerArgs << '-Xlint:-varargs'
+
     doLast {
-        scanAndInstrument(sourceSets.main, [configurations.provided, configurations.runtime])
+        scanAndInstrument(sourceSets.main, [configurations.provided, configurations.runtime, configurations.compileClasspath])
     }
 }
 
-test {
-    if (!project.ext.java8) {
-        jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
-    }
+task uninstrumentedCompileJava(type: JavaCompile) {
+    exclude '**/module-info.java'
+    source(sourceSets.main.java)
+    classpath = compileJava.classpath
+    destinationDir = file(project.buildDir.path + '/uninstrumentedClasses/java/main')
+}
 
-    dependsOn = [jar, compileClassloadertestJava]
+task uninstrumentedJar(type: org.gradle.jvm.tasks.Jar) {
+    dependsOn uninstrumentedCompileJava
+    from { uninstrumentedCompileJava.destinationDir }
+    archiveClassifier = 'uninstrumented'
+}
+
+test {
+    dependsOn = [shadowJar, compileClassloadertestJava]
     useJUnit()
 
     systemProperty 'co.paralleluniverse.monitoring.flightRecorderLevel', '5'
@@ -186,21 +198,15 @@ test {
     systemProperty 'co.paralleluniverse.flightRecorderDumpFile', 'quasar.log'
     systemProperty 'co.paralleluniverse.monitoring.flightRecorderSize', '200000'
 
-    jvmArgs "-javaagent:${project.ext.quasarJar}" // =vdmc (verbose, debug, allow monitors, check class)
-
-    if (project.name != 'quasar-kotlin') { // TODO investigate why kotlin-plugin 1.1.2+ doesn't like it
-        jvmArgs "-Xbootclasspath/a:${configurations.timewarp.singleFile}"
-        if (System.getenv("TRAVIS") == 'true') {
-            jvmArgs "-javaagent:${configurations.timewarp.singleFile}=3" // slow clock down x3
-        }
+    jvmArgs "-javaagent:${quasarJar}" // =vdmc (verbose, debug, allow monitors, check class)
+    jvmArgs "-Xbootclasspath/a:${configurations.timewarp.singleFile}"
+    if (System.getenv("TRAVIS") == 'true') {
+        jvmArgs "-javaagent:${configurations.timewarp.singleFile}=3" // slow clock down x3
     }
-
     jvmArgs "-Xmx1024m"
-
     beforeTest { desc ->
         logger.quiet("Running test: " + desc)
     }
-
     afterTest { desc, result ->
         if (result.resultType == TestResult.ResultType.FAILURE) {
             logger.quiet("Failed test ${desc.name} [${desc.className}] with exception: ${result.exception}")
@@ -209,7 +215,6 @@ test {
             }
         }
     }
-
     doLast() {
         println "file://" + getReports().getHtml().getDestination() + "/index.html"
     }
@@ -231,16 +236,61 @@ test {
 
         systemProperty "log4j.configurationFile", "${rootProject.projectDir}/log4j.xml"
         systemProperty "Log4jContextSelector", "org.apache.logging.log4j.core.async.AsyncLoggerContextSelector"
-        jvmArgs "-javaagent:${project.ext.quasarJar}" // =vdmc (verbose, debug, allow monitors, check class)
+        jvmArgs "-javaagent:${quasarJar}" // =vdmc (verbose, debug, allow monitors, check class)
     }
 }
 
-jar {
+// remove default artifact
+configurations.runtime.artifacts.with { archives ->
+    archives.each {
+        archives.remove(it)
+    }
+}
+
+[jar]*.enabled = false
+
+artifacts {
+    archives shadowJar
+    shadowedJar shadowJar
+    uninstrumentedJars(uninstrumentedJar.archiveFile) {
+        builtBy(uninstrumentedJar)
+    }
+}
+
+assemble.dependsOn shadowJar
+check.dependsOn test
+
+tasks.withType(JavaExec) {
+    classpath += sourceSets.test.runtimeClasspath + sourceSets.test.output
+}
+
+run.dependsOn compileJava, testClasses
+
+javadoc {
+    options.encoding = 'UTF-8'
+    source = sourceSets.main.allJava
+}
+
+assemble.dependsOn shadowJar
+build.dependsOn shadowJar
+
+shadowJar {
+    classifier = '' // overwrite jar
+    destinationDir = file("$buildDir/libs")
+    from sourceSets.main.output
+    configurations = [project.configurations.runtime]
+    dependencies {
+        include(dependency('org.ow2.asm:.*:.*'))
+    }
+    exclude 'META-INF/INDEX.LIST'
+    relocate 'org.objectweb.asm.', 'co.paralleluniverse.asm.'
+
     manifest {
         attributes(
                 "Implementation-Title": project.name,
                 "Implementation-Version": version,
                 "Implementation-Vendor": vendor,
+                "Automatic-Module-Name": moduleName,
                 "Premain-Class": "co.paralleluniverse.fibers.instrument.JavaAgent",
                 "Agent-Class": "co.paralleluniverse.fibers.instrument.JavaAgent",
                 "Can-Retransform-Classes": "true",
@@ -252,12 +302,11 @@ jar {
 
 tasks.withType(JavaExec) {
     classpath += sourceSets.test.runtimeClasspath + sourceSets.test.output + sourceSets.jmh.runtimeClasspath + sourceSets.jmh.output
+    jvmArgs += ['--add-opens', 'java.base/java.lang=co.paralleluniverse.quasar.core']
 }
 
 configure(javadoc) {
     classpath += configurations.provided
-
-    exclude 'module-info.java' // Temporary, as module path is not added
 
     options {
         addStringOption('Xdoclint:none', '-quiet')
@@ -265,15 +314,6 @@ configure(javadoc) {
 }
 
 defaultTasks 'build'
-/*
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}*/
 
 task artifacts {
     group = "Help"
@@ -286,33 +326,6 @@ task artifacts {
             println ' '
         }
     }
-}
-
-/*
- * see:
- *   https://docs.gradle.org/current/userguide/java_plugin.html
- *   http://examples.javacodegeeks.com/core-java/gradle/gradle-sourcesets-example/
- *   http://stackoverflow.com/questions/15870662/gradle-create-a-new-jar-from-each-sourceset
- *   http://stackoverflow.com/questions/18190614/compiling-a-project-with-different-java-source-compatibility
- *   https://softnoise.wordpress.com/2014/09/07/gradle-sub-project-test-dependencies-in-multi-project-builds/
- */
-
-apply plugin: 'com.github.johnrengelman.shadow'
-
-ext.moduleName = 'co.paralleluniverse.quasar.core'
-
-// remove default artifact
-configurations.runtime.artifacts.with { archives ->
-    archives.each {
-        archives.remove(it)
-    }
-}
-
-//[jar]*.enabled = false
-
-
-configurations {
-    archives.extendsFrom runtime
 }
 
 def scanAndInstrument(SourceSet sset, configs) {
@@ -334,4 +347,17 @@ def scanAndInstrument(SourceSet sset, configs) {
             exclude(name: 'co/paralleluniverse/fibers/instrument/*.class')
         }
     }
+
+    // Filter out the 'requires org.objectweb.asm' from quasar-core's module-info, as it will be shadowed into the jar
+    /*
+    ant.taskdef(name: 'filterModules', classname: 'co.paralleluniverse.fibers.instrument.ModuleFilterTask', classpath: cp)
+    ant.filterModules(module: 'org.objectweb.asm') {
+        fileset(dir: sset.output.classesDirs.asPath)
+    }
+    ant.filterModules(module: 'org.objectweb.asm.util') {
+        fileset(dir: sset.output.classesDirs.asPath)
+    }
+    ant.filterModules(module: 'org.objectweb.asm.commons') {
+        fileset(dir: sset.output.classesDirs.asPath)
+    }*/
 }
